tests/NormalTests/paczka1/small_fuzzy/10291024.err
Error in line 7: zOCtkdM6 S584 75,5
Error in line 8: IjKCccGRpmm S876 32,4
